# mcp-terminal

./: Cargo.toml  README.md
src/: main.rs  server.rs  session.rs
